# Core-DB

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
tests/: test_main.cpp
